Added grid created by user logic and multicolour painting

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Etch-a-Sketch</h1>
+    <button id="set-grid">Set grid</button>
     <div id="container">
         
     </div>
